Overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
 
 .fullText {
   margin-left: 9px;
-  margin-right: 9px;
+  margin-right: 95px;
 }
 
 
@@ -238,7 +238,7 @@ body {
   border-radius: 0px 0px 15px 0px;
   backdrop-filter: blur(5px);
   z-index: 99999999999;
-  box-shadow: 0px 80px 100px #000000;
+  box-shadow: 0px 30px 100px #000000d5;
   top: 0;
   left: 0;
   transition: all 0.3s;
